Fixed scrollbar in track list.

--- a/Client/inc/style.css
+++ b/Client/inc/style.css
@@ -14,9 +14,7 @@
 
 body
 {
-	margin-top: 0px;
-	margin-left: 20px;
-	margin-right: 15px;
+	margin: 0px;
 
 	overflow: auto;
 }
@@ -184,6 +182,8 @@ a:hover
 	height: 100%;
 
 	margin: auto;
+
+	transition: all 0.5s ease-in-out 0.5s;
 ;}
 
 #albumView
@@ -202,7 +202,7 @@ a:hover
 	padding-left: 20px;
 	padding-top: 25px;
 	
-	transition: all 0.5s ease-in-out 0.5s;
+	transition: top 0.5s ease-in-out 0.5s;
 }
 
 #loadingScreen
@@ -303,17 +303,27 @@ a:hover
 	padding-top: 8px;
 }
 
-#tracks
+#tracksContainer
 {
 	float: left;
-	
+
 	width: 43%;
 	height: 100%;
 
-	margin-top: 8px;
 	margin-left: 20px;
 
-	overflow: auto;
+	padding-right: 20px;
+}
+
+#tracks
+{
+	display: block;
+
+	padding-bottom: 20px;
+
+	width: 100%;
+
+	overflow: visible;
 }
 
 .playButtonSmall
@@ -971,10 +981,13 @@ input:hover
 
 #fileView
 {
-	margin-bottom: 10px;
 	border: solid 1px #DCDCDC;
+
+	margin-bottom: 10px;
 	padding: 8px;
+	
 	height: 300px;
+
 	overflow: auto;
 }
 
